# sqlx_demo

./: .env  .gitignore  Cargo.toml  README.md  db_migrate.sh  deploy.sh  docker-compose.yml
seaorm_demo/: Cargo.toml  db_migrate.sh
seaorm_demo/entities/: Cargo.toml
seaorm_demo/entities/src/: prelude.rs
seaorm_demo/migration/: Cargo.toml
seaorm_demo/migration/src/: lib.rs  m20220101_000001_create_schema.rs  m20250402_213340_create_table_with_enum.rs  m20250404_164806_populate_device_data.rs
seaorm_demo/src/: main.rs
seaorm_demo/src/entities/: device.rs  mod.rs  sea_orm_active_enums.rs
sqlx_driver_demo/: Cargo.toml  db_migrate.sh
sqlx_driver_demo/migrations/: 20250316014337_db_init.sql  20250316014527_add_config_table.sql
sqlx_driver_demo/src/: kres_types.rs  main.rs
src/: config.rs  config_ex.rs  device.rs  kres_types.rs  main.rs
