[package]
name = "seaorm_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
#inherit the dependency of tokio from the workspace
tokio = { workspace = true }

sea-orm = {version = "1.1.8", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}

migration = { path = "./migration" }
entities = {path = "./entities"}
