[package]
name = "sqlx_driver_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
sqlx = { version = "0.8.3", default-features = false, features = ["postgres", "derive", "runtime-tokio", "time","macros", "bigdecimal"] }
time = "0.3.39"
fake = { version = "2.6.1", default-features = false, features=['derive']}
dotenv = "0.15.0"